--- a/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsRecipeDetailsPage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsRecipeDetailsPage.xaml
@@ -5,27 +5,15 @@
 	  xmlns:local="using:TestHarness.Ext.Navigation.Apps.Chefs"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  xmlns:conv="using:TestHarness.Converters"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
 	  mc:Ignorable="d">
-	<Page.Resources>
-		<conv:StringFormatter x:Key="StringFormatter" />
-	</Page.Resources>
 
 	<Grid RowDefinitions="Auto,*">
-		<utu:NavigationBar Content="Recipe Details"
-						   AutomationProperties.AutomationId="{Binding Recipe.Name, Converter={StaticResource StringFormatter}, ConverterParameter='{}{0}RecipeDetailsNavigationBar'}">
-			<utu:NavigationBar.MainCommand>
-				<AppBarButton Icon="Back"
-							  AutomationProperties.AutomationId="{Binding Recipe.Name, Converter={StaticResource StringFormatter}, ConverterParameter='{}{0}RecipeDetailsBackButton'}" />
-			</utu:NavigationBar.MainCommand>
-		</utu:NavigationBar>
+		<utu:NavigationBar Content="RecipeDetails" />
 		<StackPanel Grid.Row="1">
-			<TextBlock Text="Navigation Source:" />
-			<TextBlock Text="{Binding Recipe.Name}"
-					   AutomationProperties.AutomationId="{Binding Recipe.Name, Converter={StaticResource StringFormatter}, ConverterParameter='{}{0}RecipeDetailsRecipeName'}" />
+			<TextBlock Text="ChefsRecipeDetails" />
+			<TextBlock Text="{Binding Recipe.Name}" />
 			<Button Command="{Binding LiveCooking}"
-					 AutomationProperties.AutomationId="{Binding Recipe.Name, Converter={StaticResource StringFormatter}, ConverterParameter='{}{0}LiveCooking'}"
 					Content="Start Cooking!" />
 		</StackPanel>
 	</Grid>
