--- a/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsFavoriteRecipesPage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsFavoriteRecipesPage.xaml
@@ -9,47 +9,41 @@
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
 	  mc:Ignorable="d">
 
-	<Grid RowDefinitions="Auto, *">
-		<utu:NavigationBar Content="Favorites"
-						   AutomationProperties.AutomationId="FavoritesNavigationBar" />
+	<Grid>
+		<TextBlock Text="ChefsFavoriteRecipes" />
+
 		<utu:AutoLayout Padding="16"
-						Grid.Row="1"
 						uen:Region.Attached="True"
 						Spacing="16">
-			<utu:TabBar uen:Region.Attached="True"
-						AutomationProperties.AutomationId="FavoritesTabBar"
-						SelectedIndex="0">
+			<utu:TabBar uen:Region.Attached="True">
 				<utu:TabBarItem uen:Region.Name="MyRecipes"
+								IsSelectable="True"
 								Content="My Recipes" />
 
 				<utu:TabBarItem uen:Region.Name="MyCookbooks"
+								IsSelectable="True"
 								Content="My Cookbooks" />
 			</utu:TabBar>
+
 
 			<Grid uen:Region.Attached="True"
 				  uen:Region.Navigator="Visibility"
 				  utu:AutoLayout.CounterAlignment="Stretch"
 				  utu:AutoLayout.PrimaryAlignment="Stretch">
 				<Grid uen:Region.Name="MyRecipes">
-					<StackPanel HorizontalAlignment="Center"
-								VerticalAlignment="Center">
-						<TextBlock Text="All my recipes" />
-						<Button AutomationProperties.AutomationId="FavoritesRecipeDetails"
-								Command="{Binding NavigateToRecipeDetail}"
-								Content="Recipe Details" />
-					</StackPanel>
-
+					<TextBlock HorizontalAlignment="Center"
+							   VerticalAlignment="Center"
+							   Text="All my recipes" />
+					<Button AutomationProperties.AutomationId="RecipeDetailsButton"
+							uen:Navigation.Request="ChefsFavoriteRecipeDetails"
+							Content="Recipe Details" />
 				</Grid>
 				<Grid uen:Region.Name="MyCookbooks"
 					  Visibility="Collapsed">
-					<StackPanel HorizontalAlignment="Center"
-								VerticalAlignment="Center">
-						<TextBlock Text="All my cookbooks" />
-						<Button AutomationProperties.AutomationId="CookbookDetailsButton"
-								Command="{Binding NavigateToCookbookDetail}"
-								Content="Cookbook Details" />
-					</StackPanel>
 
+					<TextBlock HorizontalAlignment="Center"
+							   VerticalAlignment="Center"
+							   Text="All my cookbooks" />
 				</Grid>
 			</Grid>
 		</utu:AutoLayout>
