--- a/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsSearchPage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/Apps/Chefs/ChefsSearchPage.xaml
@@ -5,18 +5,11 @@
 	  xmlns:local="using:TestHarness.Ext.Navigation.Apps.Chefs"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	  xmlns:utu="using:Uno.Toolkit.UI"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
 	  mc:Ignorable="d">
 
-	<Grid RowDefinitions="Auto, *">
-		<utu:NavigationBar Content="Search"
-						   AutomationProperties.AutomationId="SearchNavigationBar" />
-		<StackPanel Grid.Row="1">
-			<TextBlock Text="ChefsSearch" />
-			<Button Command="{Binding NavigateToRecipeDetail}"
-					AutomationProperties.AutomationId="SearchRecipeDetails"
-					Content="Recipe Details" />
-		</StackPanel>
+	<Grid>
+		<TextBlock Text="ChefsSearch" />
+		<Button Command="{Binding NavigateToRecipeDetail}" Content="Recipe Details" />
 	</Grid>
 </Page>
