--- a/testing/TestHarness/TestHarness/Ext/Navigation/PageNavigation/PageNavigationTwoPage.xaml
+++ b/testing/TestHarness/TestHarness/Ext/Navigation/PageNavigation/PageNavigationTwoPage.xaml
@@ -19,9 +19,14 @@
 					VerticalAlignment="Center"
 					Grid.Row="1">
 			<TextBlock>
-	<Run Text="Created on UI Thread: " /><Run Text="{Binding CreatedOnUIThread}" />
+				<Run Text="Created on UI Thread: " /><Run Text="{Binding CreatedOnUIThread}" />
 			</TextBlock>
 			<TextBlock Text="{Binding Model.Value}" />
+			<TextBlock x:Name="TxtUrl"
+					   AutomationProperties.AutomationId="SecondPageTxtUrlFromBrowser" />
+			<Button AutomationProperties.AutomationId="SecondPageGetUrlFromBrowser"
+					Click="GetUrlFromBrowser"
+					Content="Get URL" />
 			<Button AutomationProperties.AutomationId="TwoPageToThreePageButton"
 					Content="Three"
 					uen:Navigation.Request="PageNavigationThree" />
